# agent-intent-protocol-python

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
agent_intent_protocol/: __init__.py  client.py
agent_intent_x402/: __init__.py  client.py  client_async.py  errors.py  models.py  receipt.py  wallet.py
examples/: 01_discover.py  02_resolve.py  03_execute_with_wallet.py  04_offline_receipt.py  README.md  basic_usage.py
federation/: README.md  pyproject.toml
federation/air_federation_verifier/: __init__.py  __main__.py  canonical.py  chain.py  verify.py
federation/deploy/: Dockerfile  README.md  docker-compose.yml  server.py
federation/examples/: intent.json  receipt.evm.json  result.json
federation/tests/: test_cross_implementation.py  test_federation_consensus.py  test_offline_self_attestation.py
spec/: AIR-1.md  IETF_SUBMISSION.md  draft-air-agent-intent-receipt-00.html  draft-air-agent-intent-receipt-00.md  draft-air-agent-intent-receipt-00.txt  draft-air-agent-intent-receipt-00.xml
tests/: test_client.py  test_x402_payment.py
