[project]
name = "agent-intent-protocol"
version = "0.1.0"
description = "Python client for the Agent Intent Protocol — declare an intent, let the protocol route it to the optimal AI provider."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "JarvisClaw", email = "dev@jarvisclaw.ai"}
]
keywords = ["ai", "agent", "intent", "protocol", "llm", "routing", "jarvisclaw", "aip"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "httpx>=0.24.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-httpx>=0.21.0", "ruff>=0.1.0"]

[project.urls]
Homepage = "https://github.com/api-jarvisclaw/agent-intent-protocol-python"
Documentation = "https://github.com/api-jarvisclaw/agent-intent-protocol-python#readme"
Repository = "https://github.com/api-jarvisclaw/agent-intent-protocol-python"
Issues = "https://github.com/api-jarvisclaw/agent-intent-protocol-python/issues"
Protocol = "https://github.com/api-jarvisclaw/agent-intent-protocol"
Platform = "https://api.jarvisclaw.ai"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent_intent_protocol"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100
