[project]
name = "agent-intent-x402"
version = "0.3.0"
description = "Pay-per-request access to any service for AI agents, over the open x402 protocol. Declare an intent, discover a provider, and settle on-chain with a single signature."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "JarvisClaw", email = "dev@jarvisclaw.ai"}
]
keywords = ["x402", "ai", "agent", "intent", "payments", "usdc", "eip-3009", "llm", "http-402"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Internet :: WWW/HTTP",
]

dependencies = [
    "httpx>=0.24.0",
    "eth-account>=0.11.0",
]

[project.optional-dependencies]
solana = ["pynacl>=1.5.0"]
dev = ["pytest>=7.0", "pytest-httpx>=0.21.0", "pytest-asyncio>=0.23.0", "ruff>=0.1.0", "pynacl>=1.5.0"]

[project.urls]
Homepage = "https://github.com/api-jarvisclaw/agent-intent-x402"
Documentation = "https://github.com/api-jarvisclaw/agent-intent-x402#readme"
Repository = "https://github.com/api-jarvisclaw/agent-intent-x402"
Issues = "https://github.com/api-jarvisclaw/agent-intent-x402/issues"
Protocol = "https://github.com/api-jarvisclaw/agent-intent-protocol"
x402 = "https://x402.org"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent_intent_x402"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py310"
line-length = 100
